keycloak/key-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: shym/keycloak:latest
        resources:
            requests:
                memory: "1Gi"
        ports:
        - containerPort: 8081
