keycloak/key-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: keycloak-ingress
spec:
  backend:
    serviceName: keycloak
    servicePort: 8081
